--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 spring.data.mongodb.uri=mongodb+srv://root:root@eattogo.9lzaqwe.mongodb.net/?retryWrites=true&w=majority&appName=Eattogo
 spring.data.mongodb.database=Signup
+server.port=4459
